<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="Random Numbers Graph and Table"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="407dp"
        android:layout_height="270dp"
        android:layout_marginTop="300dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="413dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:stretchColumns="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <!-- Table Heading -->

            <TableRow android:background="@color/teal_200">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="4dip"
                    android:text="@string/num_run"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="4dip"
                    android:text="@string/rand_num"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <!-- Table Data -->
            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="4dip"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="4dip"
                    android:text="@string/start_num"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>


    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#119099"
        android:text="@string/update_to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>